--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,13 @@ name = "oxc-py"
 version = "0.1.0"
 edition = "2021"
 
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+name = "oxc_py"
+crate-type = ["cdylib"]
+
 [dependencies]
+pyo3 = "0.23.3"
 oxc_allocator = "0.44.0"
 oxc_codegen = "0.44.0"
 oxc_parser = "0.44.0"
