--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -152,12 +152,30 @@ jobs:
         with:
           name: wheels-sdist
           path: dist
+  
+  unit-test:
+    name: Unit tests
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        version: ['3.10', '3.12']
+    steps:
+      - uses: actions/checkout@v4
+      - uses: astral-sh/setup-uv@v3
+        with:
+          version: "latest"
+        env:
+          UV_PYTHON: ${{ matrix.version }}
+      - name: Install vitessce
+        run: uv sync --extra dev
+      - name: Run tests
+        run: uv run pytest
 
   release:
     name: Release
     runs-on: ubuntu-latest
     if: ${{ startsWith(github.ref, 'refs/tags/') || github.event_name == 'workflow_dispatch' }}
-    needs: [linux, musllinux, windows, macos, sdist]
+    needs: [unit-test, linux, musllinux, windows, macos, sdist]
     permissions:
       # Use to sign the release artifacts
       id-token: write
