Add pyodide workflow

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -170,6 +170,21 @@ jobs:
         with:
           name: wheels-sdist
           path: dist
+  
+  pyodide:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: 3.12
+      - run: |
+          pip install pyodide-build>=0.28.0
+          echo EMSCRIPTEN_VERSION=$(pyodide config get emscripten_version) >> $GITHUB_ENV
+      - uses: mymindstorm/setup-emsdk@v14
+        with:
+          version: ${{ env.EMSCRIPTEN_VERSION }}
+      - run: pyodide build
 
   release:
     name: Release
